# LemmyModBot

./: .gitignore  Bag of Words.py  Bow2.py  Dockerfile  Pipfile  README.md  __about__.py  build_model.py  comments_bot.py  config.py  credentials.py  credentials_template.py  database.py  docker-compose.example.yml  gitversion.yml  lemmy_world_comments.py  lemmy_world_posts.py  lemmybot.py  main.py  matrix.py  matrix_client.py  models.py  phash_tool.py  posts_and_comments_bot.py  posts_bot.py  processor.py  pyproject.toml  reconnection_manager.py  requirements.txt  setup.cfg  setup.py  train.tsv
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
alembic/versions/: 20406b4c2dae_initial_table_version.py
api/: __init__.py  lemmy_mod_http.py  message.py
data/: train copy.tsv  train.tsv  train_random.single.json
history/: history.db
lemmymodbot/: __init__.py  bag_of_words.py  config.py  database.py  lemmybot.py  pagenator.py  paginator.py
lemmymodbot/api/: __init__.py  endpoints.py  lemmy_mod_http.py  matrix_client.py  photodna_client.py
lemmymodbot/data/: __init__.py  base.py  monitor_persistence.py
lemmymodbot/helpers/: __init__.py  extract_links_from_markdown.py  fetch_image.py  spam_image_bootstrapper.py
lemmymodbot/ml/: __init__.py  bag_of_words.py  classifier.py
models/: bag_of_words.py
processors/: __init__.py  base.py  blacklist_processor.py  phash_processor.py  processor.py  title_commenter_processor.py  title_conformity_processor.py  toxicity_processor.py  user_processor.py
src/: bag_of_words.py  lemmybot.py
training/: train.tsv
(+33 files in other folders)
