[tool.ruff]
ignore-init-module-imports = true
exclude = ["alembic/*.py", "alembic/versions/*.py"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401","E402","F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
