[metadata]
name = lemmymodbot_test
description = A bot framework to automate Lemmy moderation tasks
long_description_content_type = text/markdown
url = https://github.com/BenMMcLean/LemmyModBot
project_urls =
    Bug Tracker = https://github.com/BenMMcLean/LemmyModBot/issues
    Changelog = https://github.com/BenMMcLean/LemmyModBot/releases

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src